--- a/views/form.ejs
+++ b/views/form.ejs
@@ -39,13 +39,13 @@
             <img class="img-fluid" src="./images/h1.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img class="img-fluid" src="./images/axisb1.png" alt="" />
+            <img class="img-fluid" src="./images/ax1.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img class="img-fluid" src="./images/axisb2.jpg" alt="" />
+            <img class="img-fluid" src="./images/ax2.jpg" alt="" />
           </div>
           <div class="swiper-slide">
-            <img class="img-fluid" src="./images/axisb3.jpg" alt="" />
+            <img class="img-fluid" src="./images/ax3.jpg" alt="" />
           </div>
         </div>
         <div class="swiper-button-next"></div>
