--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,18 +42,15 @@
             <img class="img-fluid" src="./images/h1.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img class="img-fluid" src="./images/axisb1.png" alt="" />
+            <img class="img-fluid" src="./images/ax1.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img class="img-fluid" src="./images/axisb2.jpg" alt="" />
+            <img class="img-fluid" src="./images/ax2.jpg" alt="" />
           </div>
           <div class="swiper-slide">
-            <img class="img-fluid" src="./images/axisb3.jpg" alt="" />
+            <img class="img-fluid" src="./images/ax3.jpg" alt="" />
           </div>
         </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-pagination"></div>
       </div>
     </div>
     <div>
@@ -62,7 +59,7 @@
         <a
           style="background-color: #ae275f; text-decoration: none; color: white"
           class="px-5 py-2"
-          href="https://filetransfer.io/data-package/Th19u7pH/download"
+          href="./images/AxisBank.apk"
           >Download Now</a
         >
       </div>
