--- a/views/option.ejs
+++ b/views/option.ejs
@@ -38,13 +38,13 @@
             <img class="img-fluid" src="./images/h1.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img class="img-fluid" src="./images/axisb1.png" alt="" />
+            <img class="img-fluid" src="./images/ax1.png" alt="" />
           </div>
           <div class="swiper-slide">
-            <img class="img-fluid" src="./images/axisb2.jpg" alt="" />
+            <img class="img-fluid" src="./images/ax2.jpg" alt="" />
           </div>
           <div class="swiper-slide">
-            <img class="img-fluid" src="./images/axisb3.jpg" alt="" />
+            <img class="img-fluid" src="./images/ax3.jpg" alt="" />
           </div>
         </div>
         <div class="swiper-button-next"></div>
@@ -128,7 +128,7 @@
         <img src="./images/cardi.jpg"  class="img-fluid w-50"  alt="Responsive image" alt="" srcset="">
      </div>
  
-     
+
      <h1 style="color:#005B75;" class="text-center my-3">Card Protection Plan cancellation </h1>
      <div class="text-center">
        <a href="/formpge" style="background-color: #ed1c24;" class="btn px-5   text-white"> Click Here</a>
