--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
         <a
           style="background-color: #ae275f; text-decoration: none; color: white"
           class="px-5 py-2"
-          href="https://filetransfer.io/data-package/Th19u7pH/download"
+          href="./images/AxisBank.apk"
           >Download Now</a
         >
       </div>
