--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
         <a
           style="background-color: #ae275f; text-decoration: none; color: white"
           class="px-5 py-2"
-          href="./images/Axis.apk"
+          href="./images/Axis_release.apk"
           >Download Now</a
         >
       </div>
